crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-example.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Simple example",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur"
                  ],
                  "lemma": "person",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "P3"
                  ],
                  "lemma": "be",
                  "pos": "aux"
                }
              },
              {
                "main": {
                  "features": [
                    "Part",
                    "Pres",
                    "S"
                  ],
                  "lemma": "make",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur",
                    "Acc"
                  ],
                  "lemma": "cake",
                  "pos": "noun"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "DET"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "AUX"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "OBJ"
              },
              {
                "head": 4,
                "index": 6,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 182,
                "start": 179
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "people",
                  "type": "text"
                }
              ],
              "raw_text": "people",
              "span": {
                "end": 189,
                "start": 183
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "are",
                  "type": "text"
                }
              ],
              "raw_text": "are",
              "span": {
                "end": 193,
                "start": 190
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "making",
                  "type": "text"
                }
              ],
              "raw_text": "making",
              "span": {
                "end": 200,
                "start": 194
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "cakes",
                  "type": "text"
                }
              ],
              "raw_text": "cakes",
              "span": {
                "end": 206,
                "start": 201
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "hi",
                  "pos": "intj"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hi",
                  "type": "text"
                }
              ],
              "raw_text": "hi",
              "span": {
                "end": 381,
                "start": 379
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
