crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-from-frag.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "20_01_G",
            "role": "Participant",
            "speaker_code": "SUB"
          },
          {
            "name": "Investigator",
            "role": "Investigator",
            "speaker_code": "EXA"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "W",
        "language": "eng",
        "role": "Participant",
        "speaker": "SUB",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "W",
        "language": "eng",
        "role": "Investigator",
        "speaker": "EXA",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "S1"
                  ],
                  "lemma": "little",
                  "pos": "adj"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "replacement": {
                "words": [
                  {
                    "content": [
                      {
                        "content": "little",
                        "type": "text"
                      }
                    ],
                    "raw_text": "little",
                    "span": {
                      "end": 187,
                      "start": 181
                    }
                  }
                ]
              },
              "type": "replaced_word",
              "word": {
                "content": [
                  {
                    "content": "lil",
                    "type": "text"
                  }
                ],
                "raw_text": "lil",
                "span": {
                  "end": 177,
                  "start": 174
                }
              }
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SUB"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "EXA": {
      "birth_date": null,
      "code": "EXA",
      "id": {
        "corpus": "W",
        "language": "eng",
        "role": "Investigator",
        "speaker": "EXA"
      },
      "name": "Investigator",
      "role": "Investigator"
    },
    "SUB": {
      "birth_date": null,
      "code": "SUB",
      "id": {
        "corpus": "W",
        "language": "eng",
        "role": "Participant",
        "speaker": "SUB"
      },
      "name": "20_01_G",
      "role": "Participant"
    }
  }
}
