crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-gra-pho-mod.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
assertion_line: 140
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Alex",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Mother",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Speaker",
            "role": "Speaker",
            "speaker_code": "OPE"
          },
          {
            "name": "Environment",
            "role": "Environment",
            "speaker_code": "ENV"
          },
          {
            "name": "Speaker",
            "role": "Speaker",
            "speaker_code": "TOY"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;04.28",
        "corpus": "Alex",
        "language": "eng",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Speaker",
        "speaker": "OPE",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Speaker",
        "speaker": "TOY",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "matt denio",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Language of Caregivers Mother Southeastern Massachusetts , Father Southeastern Massachusetts , Grandmother Southeastern Massachusetts",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "02-MAY-2002",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "ˈmɑmiː"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "ˈɑmɪ"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        },
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Mommy",
                  "pos": "propn"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "Mommy",
                        "type": "text"
                      }
                    ],
                    "raw_text": "Mommy",
                    "scoped_annotations": [
                      {
                        "type": "scopeduncertain"
                      }
                    ],
                    "span": {
                      "end": 550,
                      "start": 545
                    },
                    "type": "annotated_word"
                  }
                ]
              },
              "type": "pho_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;04.28",
        "corpus": "Alex",
        "language": "eng",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Alex",
      "role": "Target_Child"
    },
    "ENV": {
      "birth_date": null,
      "code": "ENV",
      "id": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV"
      },
      "name": "Environment",
      "role": "Environment"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Mother",
      "role": "Mother"
    },
    "OPE": {
      "birth_date": null,
      "code": "OPE",
      "id": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Speaker",
        "speaker": "OPE"
      },
      "name": "Speaker",
      "role": "Speaker"
    },
    "TOY": {
      "birth_date": null,
      "code": "TOY",
      "id": {
        "age": "25;",
        "corpus": "Alex",
        "language": "eng",
        "role": "Speaker",
        "speaker": "TOY"
      },
      "name": "Speaker",
      "role": "Speaker"
    }
  }
}
